# cpp-labs

cpp-lab2/: CMakeLists.txt  Point.cpp  Point.h  Segment.cpp  Segment.h  flying_rect.cpp  flying_rect.h  main.cpp
cpp-lab2/menu/: buttons.cpp  buttons.h  menu.cpp  menu.h  text.cpp  text.h
cpp_lab3/: Button.cpp  Button.h  CMakeLists.txt  ConfigAnalyser.cpp  ConfigAnalyser.h  DialogButtons.cpp  DialogButtons.h  MainButtons.cpp  MainButtons.h  Menu.cpp  Menu.h  MenuInit.cpp  MenuInit.h  PopButtons.cpp  PopButtons.h  Rectan.cpp  Rectan.h  includeLibs.h  main.cpp
cpp_lab3/resources/: menu.txt
